--- a/vaccine-book-app/package.json
+++ b/vaccine-book-app/package.json
@@ -17,7 +17,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "dayjs": "^1.11.9",
-    "next": "13.4.19",
+    "next": "^13.5.4",
+    "next-auth": "^4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
